# simbirsoft_test

./: .gitignore  pyproject.toml
classes/: registration_page.py  user_registration.py
tests/: conftest.py  test_student_form.py
